--- a/main.tex
+++ b/main.tex
@@ -118,13 +118,13 @@
 
 % comments \nb{label}{color}{text}
 \newboolean{showcomments}
-\setboolean{showcomments}{true}
+\setboolean{showcomments}{false}
 \ifthenelse{\boolean{showcomments}}
 	{\newcommand{\nb}[3]{
 		{\colorbox{#2}{\bfseries\sffamily\scriptsize\textcolor{white}{#1}}}
 		{\textcolor{#2}{\sf\small$\blacktriangleright$\textit{#3}$\blacktriangleleft$}}}
 	 \newcommand{\version}{\emph{\scriptsize$-$Id$-$}}}
-	{\newcommand{\nb}[2]{}
+	{\newcommand{\nb}[3]{}
 	 \newcommand{\version}{}}
 \newcommand{\rev}[2]{\nb{Reviewer #1}{red}{#2}}
 \newcommand{\ab}[1]{\nb{Alexandre}{blue}{#1}}
@@ -473,13 +473,15 @@ shape := KLCube new
 				height: #numberOfInstanceVariables.
 packages := 
 	PackageInfo allPackages 
-		select: [:pak | pak packageName matches: 'Klotz-*'].
+		select: [:pak | pak packageName 
+						matches: 'Klotz-*'].
 
 block := KLBlockLayout new.
 packages do: [ :pak | 
-	block with: {view nodes: pak classes using: shape } ].
+	block with: 
+		{view nodes: pak classes using: shape } ].
 view applyLayout: block
-	\end{lstlisting}
+\end{lstlisting}
 \fig{}{0.4}{figure9.png}{Block Layout}
 
 The script gives a randomly chosen color to each package of Klotz. The color is used to paint the classes of each package. Each node is a colored class. The height represents the number of attributes. 
@@ -699,7 +701,7 @@ not only on the visualization itself, but in the analysis of software
 evolution. It also support  reverse engineering.
 
 CodeCity is programmed in VisualWorks Smalltalk on top of the Moose 
-platform, just like Lumiere, it uses OpenGL for rendering.
+platform. Just like Lumiere, it uses OpenGL for rendering.
 
 When it comes to Klotz, not been as expressive as Codecity, eventually, 
 and depending on the programer's skills, it can implement most  
